--- a/style.css
+++ b/style.css
@@ -13,32 +13,33 @@
 html,
 body {
     width: 100%;
-    height: 100vh;
+    height: 100%;
 }
 
 
 #main {
     width: 100%;
-    height: 100vh;
-    
+    height: 100%;
+
+}
+
+::-webkit-scrollbar {
+    display: none;
 }
 
 
 #back {
     width: 100%;
-    height: 100vh;
-    
+    min-height: 100%;
+
 }
 
-#back img{
+#back img {
     width: 100%;
     height: 100%;
     object-fit: cover;
 
 }
-
-
-
 
 #top {
     pointer-events: none;
@@ -47,7 +48,7 @@ body {
     left: 0;
     width: 100%;
     height: 100vh;
- }
+}
 
 #workingarea {
     position: relative;
@@ -89,11 +90,15 @@ body {
     letter-spacing: 1px;
 }
 
+#nav i{
+    display: none;
+}
+
 #hero {
-    position: absolute;
+    /* position: absolute;
     top: 50%;
     left: 0%;
-    transform: translate(0%, -50%);
+    transform: translate(0%, -50%); */
     display: flex;
     justify-content: space-between;
     width: 100%;
@@ -124,7 +129,7 @@ body {
     left: 0;
 }
 
-#heroleft .elem h1:nth-child(1){
+#heroleft .elem h1:nth-child(1) {
     top: 0;
 }
 
@@ -147,27 +152,116 @@ body {
     color: #fff;
 }
 
-#heroright p{
+#heroright p {
     margin-bottom: 50px;
     font-size: 15px;
     font-weight: 300;
     text-align: right;
 }
 
-#heroright #imgdiv{
+#heroright #imgdiv {
     width: 100%;
     height: 170px;
     margin-top: -20px;
     margin-bottom: 30px;
-    background:url("https://images.unsplash.com/photo-1491349174775-aaafddd81942?auto=format&fit=crop&q=80&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&w=3087");
+    background: url("https://images.unsplash.com/photo-1491349174775-aaafddd81942?auto=format&fit=crop&q=80&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&w=3087");
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
 }
 
 
-#heroright p:nth-child(3){
-    margin-bottom:100px;
+#heroright p:nth-child(3) {
+    margin-bottom: 100px;
 }
 
 
+
+
+
+
+@media screen and (max-width:1250px) {
+    #back {
+        position: fixed;
+    }
+
+
+    #hero {
+        flex-direction: column;
+        padding-top: 5%;
+    }
+
+
+    #heroleft {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+    }
+
+    #heroleft .elem {
+        margin: auto;
+        text-align: center;
+        height: 25vw;
+        width: 100vw;
+    }
+
+    #heroleft .elem h1 {
+        font-size: 12em;
+    }
+
+    #heroleft button {
+        width: fit-content;
+        font-size: 4.9em;
+    }
+
+
+
+   
+    #heroright {
+        width: 100%;
+        height: 50vh;
+        padding-top: 50px;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        flex-direction: row;
+        flex-wrap: wrap;
+        
+    }
+
+    #heroright p {
+        font-size: 20px;
+        text-align: left;
+
+    }
+
+    #heroright #imgdiv {
+        height: 50%;
+        width: 30%;
+        margin: 30px;
+    }
+}
+
+
+
+@media screen and (max-width:550px) {
+    #heroleft .elem {
+        margin: auto;
+        text-align: center;
+        height: 25vw;
+        width: 100vw;
+    }
+
+    #heroleft .elem h1 {
+        font-size: 5em;
+    }
+
+    #nav a{
+        display: none;
+    }
+
+    #nav i {
+        display: block;
+        color: aliceblue;
+    }
+}
